agregué la parte 4

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./media/icons8-trasero-de-gato-16.png" type="image/x-icon">
     <title>Desafío 1</title>
 </head>
 <body>
@@ -53,6 +54,8 @@
         <a href="./pages/desafio2.html">Ir a Desafío 2</a>
         <br><br>
         <a href="./pages/desafio3.html">Ir a Desafío 3</a>
+        <br><br>
+        <a href="./pages/desafio4.html">Ir a Desafío 4</a>
     </main>
 </body>
 </html>
