--- a/pages/desafio3.html
+++ b/pages/desafio3.html
@@ -55,5 +55,7 @@
     <a href="../pages/desafio2.html">Volver a Desafío 2</a>
     <br><br>
     <a href="../index.html">Volver a Desafío 1</a>
+    <br><br>
+    <a href="./desafio4.html">Ir a Desafío 4</a>
 </body>
 </html>
