--- a/pages/desafio2.html
+++ b/pages/desafio2.html
@@ -73,6 +73,8 @@
     <br>
     <a href="../index.html">Volver a Desafío 1</a>
     <br><br>
-    <a href="../pages/desafio3.html">Ir a Desafío 3</a>
+    <a href="./desafio3.html">Ir a Desafío 3</a>
+    <br><br>
+    <a href="./desafio4.html">Ir a Desafío 4</a>
 </body>
 </html>
